--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Razorpay</title>
   <link rel="stylesheet" href="main.css" />
-   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
 <body>
   <!-- nav bar -->
-  <nav class="bg-deepBlue">
+  <nav class="deepBlue">
     <div class="relative w-[1080px] mx-auto flex items-center justify-between">
       <!--logo   -->
       <a href="/ " class="cursor-pointer py-7 pr-7">
@@ -73,7 +73,7 @@
     </div>
   </nav>
   <!--hero section  -->
-  <section class="relative bg-deepBlue overflow-x-clip">
+  <section class="relative deepBlue overflow-x-clip">
     <div class="flex max-w-[1080px] width-10/12 flex-col lg:flex-row justify-between items-center mx-auto">
       <!-- left vala -->
       <div class="text-white space-y-8 ">
@@ -195,7 +195,7 @@
           <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
             <!--text part-->
             <div>
-              <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+              <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
               <p class="font-mullish text-grayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
@@ -237,7 +237,7 @@
           <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
             <!--text part-->
             <div>
-              <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+              <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
               <p class="font-mullish text-grayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
@@ -255,7 +255,7 @@
         </div>
         <!--Box3-->
         <div class="w-full min-h-[15rem] relative cursor-pointer">
-          <img src="img/payment-link-icon.svg" alt="" class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
+          <img src="img/payment-link-icon.svg" alt="" class="bglightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                   transition-all duration-200">
 
           <!--box shape-->
@@ -279,16 +279,16 @@
           <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
             <!--text part-->
             <div>
-              <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+              <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
               <p class="font-mullish text-grayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
             <!--hyperlink know more-->
             <div class="flex items-center cursor-pointer group">
-              <a href="#" class="font-mullish font-bold text-lightBlue500 
+              <a href="#" class="font-mullish font-bold textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200">Know More</a>
-              <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+              <i data-feather="chevron-right" class="w-5 h-5 textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200"></i>
             </div>
 
@@ -321,16 +321,16 @@
           <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
             <!--text part-->
             <div>
-              <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+              <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
               <p class="font-mullish text-grayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
             <!--hyperlink know more-->
             <div class="flex items-center cursor-pointer group">
-              <a href="#" class="font-mullish font-bold text-lightBlue500 
+              <a href="#" class="font-mullish font-bold textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200">Know More</a>
-              <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+              <i data-feather="chevron-right" class="w-5 h-5 textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200"></i>
             </div>
 
@@ -339,7 +339,7 @@
         </div>
         <!--Box5-->
         <div class="w-full min-h-[15rem] relative cursor-pointer">
-          <img src="img/payment-link-icon.svg" alt="" class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
+          <img src="img/payment-link-icon.svg" alt="" class="lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                   transition-all duration-200">
 
           <!--box shape-->
@@ -363,16 +363,16 @@
           <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
             <!--text part-->
             <div>
-              <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+              <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
               <p class="font-mullish text-grayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
             <!--hyperlink know more-->
             <div class="flex items-center cursor-pointer group">
-              <a href="#" class="font-mullish font-bold text-lightBlue500 
+              <a href="#" class="font-mullish font-bold textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200">Know More</a>
-              <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+              <i data-feather="chevron-right" class="w-5 h-5 textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200"></i>
             </div>
 
@@ -381,7 +381,7 @@
         </div>
         <!--Box6-->
         <div class="w-full min-h-[15rem] relative cursor-pointer">
-          <img src="img/payment-link-icon.svg" alt="" class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
+          <img src="img/payment-link-icon.svg" alt="" class="bglightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                   transition-all duration-200">
 
           <!--box shape-->
@@ -866,7 +866,7 @@
       <img src="img/feature-section1-dottedrows.png" alt=""
       class="absolute w-[200px] top-[8rem] left-[2rem] -z-10">
 
-      <h2 class="font-mullish font-extrabold text-2xl text-deepBlueHead text-center">Clone website
+      <h2 class="font-mullish font-extrabold text-2xl textdeepBlueHead text-center">Clone website
         <br>Made By <span class="font-name text-red-600">_Alkush</span></h2>
       <div class="w-6 h-1 bg-greenLight mx-auto my-4"></div>
 
