--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <div class="overflow-x-hidden">
   <!-- nav bar -->
   <nav class="deepBlue">
     <div class="relative w-[1080px] mx-auto flex items-center justify-between">
@@ -171,7 +172,7 @@
       <div class="w-full grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-10">
         <!--Box1-->
         <div class="w-full min-h-[15rem] relative cursor-pointer">
-          <img src="img/payment-link-icon.svg" alt="" class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
+          <img src="img/payment-link-icon.svg" alt="" class="bglightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                   transition-all duration-200">
 
           <!--box shape-->
@@ -196,13 +197,13 @@
             <!--text part-->
             <div>
               <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
-              <p class="font-mullish text-grayText mt-6">
+              <p class="font-mullish textgrayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
             <!--hyperlink know more-->
             <div class="flex items-center cursor-pointer group">
-              <a href="#" class="font-mullish font-bold text-lightBlue500 
+              <a href="#" class="font-mullish font-bold textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200">Know More</a>
               <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
                           group-hover:text-grayBlue transition-all duration-200"></i>
@@ -238,15 +239,15 @@
             <!--text part-->
             <div>
               <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
-              <p class="font-mullish text-grayText mt-6">
+              <p class="font-mullish textgrayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
             <!--hyperlink know more-->
             <div class="flex items-center cursor-pointer group">
-              <a href="#" class="font-mullish font-bold text-lightBlue500 
+              <a href="#" class="font-mullish font-bold textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200">Know More</a>
-              <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+              <i data-feather="chevron-right" class="w-5 h-5 textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200"></i>
             </div>
 
@@ -280,7 +281,7 @@
             <!--text part-->
             <div>
               <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
-              <p class="font-mullish text-grayText mt-6">
+              <p class="font-mullish textgrayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
@@ -297,7 +298,7 @@
         </div>
         <!--Box4-->
         <div class="w-full min-h-[15rem] relative cursor-pointer">
-          <img src="img/payment-link-icon.svg" alt="" class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
+          <img src="img/payment-link-icon.svg" alt="" class="bglightBlue absolute right-3 top-3 w-12 h-12 rounded-full z-[8]
                   transition-all duration-200">
 
           <!--box shape-->
@@ -322,7 +323,7 @@
             <!--text part-->
             <div>
               <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
-              <p class="font-mullish text-grayText mt-6">
+              <p class="font-mullish textgrayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
@@ -364,7 +365,7 @@
             <!--text part-->
             <div>
               <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
-              <p class="font-mullish text-grayText mt-6">
+              <p class="font-mullish textgrayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
@@ -405,16 +406,16 @@
           <div class="z-[100] absolute w-full h-full flex flex-col justify-between pl-5 py-6 pr-8">
             <!--text part-->
             <div>
-              <h3 class="font-mullish font-bold text-deepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
-              <p class="font-mullish text-grayText mt-6">
+              <h3 class="font-mullish font-bold textdeepBlueHead leading-[1.2] text-[1.375rem]">Payment Links</h3>
+              <p class="font-mullish textgrayText mt-6">
                 Share payment link via an email, SMS, messenger, chatbot etc. and get paid immediately</p>
             </div>
 
             <!--hyperlink know more-->
             <div class="flex items-center cursor-pointer group">
-              <a href="#" class="font-mullish font-bold text-lightBlue500 
+              <a href="#" class="font-mullish font-bold textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200">Know More</a>
-              <i data-feather="chevron-right" class="w-5 h-5 text-lightBlue500 
+              <i data-feather="chevron-right" class="w-5 h-5 textlightBlue500 
                           group-hover:text-grayBlue transition-all duration-200"></i>
             </div>
 
@@ -455,33 +456,33 @@
 
             <ul class="space-y-2">
               <li class="font-mullish text-white flex items-center space-x-2">
-                <i data-feather="check" class="text-greenLight"></i>
+                <i data-feather="check" class="textgreenLight"></i>
                 <span>Open a fully digital current account
                 </span>
               </li>
               <li class="font-mullish text-white flex items-center space-x-2">
-                <i data-feather="check" class="text-greenLight"></i>
+                <i data-feather="check" class="textgreenLight"></i>
                 <span>Automate payables & compliment payments
                 </span>
               </li>
               <li class="font-mullish text-white flex items-center space-x-2">
-                <i data-feather="check" class="text-greenLight"></i>
+                <i data-feather="check" class="textgreenLight"></i>
                 <span>Simplify and track spends with Corporate cards
                 </span>
               </li>
               <li class="font-mullish text-white flex items-center space-x-2">
-                <i data-feather="check" class="text-greenLight"></i>
+                <i data-feather="check" class="textgreenLight"></i>
                 <span>View financial insights at a glance
                 </span>
               </li>
             </ul>
             <div class="flex flex-col-reverse md:flex-row w-full items-center space-x-4 ">
-              <button class="relative bg-lightBlue flex items-center 
+              <button class="relative bglightBlue flex items-center 
                           place-content-center md:justify-start text-white py-[14px] px-[18px] md:pr-[90px] rounded-md
                            font-mullish font-bold hover:bg-lightBlue500 transition-all duration-200
                            self-stretch md:w-fit">
                 Sign Up
-                <div class="w-12 h-[60px] bg-greenLight absolute right-6 skew-x-[20deg] 
+                <div class="w-12 h-[60px] bggreenLight absolute right-6 skew-x-[20deg] 
                               flex justify-center items-center">
                   <!--arrow-->
                   <svg viewBox="0 0 24 24" focusable="false" class="w-[20px] h-[20px] -skew-x-[20deg] ">
@@ -924,7 +925,7 @@
    </div>
 
   </section>
-  
+ </div> 
   <script>
     feather.replace()
   </script>
